name:              owl
version:           0.3.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: ., app
    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Model.Fields
                     Model
                     Settings
                     Settings.StaticFiles
                     Handler.AdminTools
                     Handler.Common
                     Handler.Config
                     Handler.Help
                     Handler.Home
                     Handler.Service
                     Handler.Top
                     Owl.Helpers.Form
                     Owl.Helpers.Util
                     Owl.Helpers.Widget

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards
                TypeSynonymInstances

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.1      && < 1.5
                 , yesod-core                    >= 1.4.6      && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-static                  >= 1.4.0.3    && < 1.6
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , classy-prelude                >= 0.10.2
                 , classy-prelude-conduit        >= 0.10.2
                 , classy-prelude-yesod          >= 0.10.2
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 2.0        && < 2.3
                 , persistent-postgresql         >= 2.1.1      && < 2.3
                 , persistent-template           >= 2.0        && < 2.3
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 1.1
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 3.2
                 , data-default
                 , aeson                         >= 0.6        && < 0.10
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.5
                 , wai-logger                    >= 2.2        && < 2.3
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time

                 , RSA >= 2.0 && < 2.2
                 , SHA >= 1.6 && < 1.7
                 , attoparsec >= 0.10 && < 0.14
                 , blaze-html >= 0.7 && < 0.9
                 , crypto-pubkey >= 0.1 && < 0.3
                 , crypto-pubkey-openssh >= 0.2 && < 0.3
                 , csv-conduit >= 0.6 && < 0.7
                 , mime-mail >= 0.4 && < 0.5
                 , pureMD5 >= 2.1 && < 2.2
                 , random >= 1.0 && < 1.2
                 , utf8-string >= 1.0 && < 1.1
                 , utility-ht >= 0.0.10 && < 0.1
                 , wai >= 1.4 && < 4.0

                 , owl-auth >= 0.5 && < 0.6
                 , yesod-auth-hashdb >= 1.4 && < 1.5

executable         owl
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , owl

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

executable         genkey
    if flag(library-only)
        Buildable: False

    main-is:           genkey.hs
    hs-source-dirs:    tools
    build-depends:     base
                     , bytestring
                     , crypto-pubkey-openssh
                     , owl-auth

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , owl
                 , yesod-test >= 1.4.3 && < 1.5
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec >= 2.0.0
                 , classy-prelude
                 , classy-prelude-yesod

